--- a/Module 18-19 - "Django"/Module_18_3/templates/third_task/shop.html
+++ b/Module 18-19 - "Django"/Module_18_3/templates/third_task/shop.html
@@ -8,11 +8,13 @@
     <h1> Игры </h1>
 <br>
     <ul>
-        <li>AtomicHeart <button>Купить</button> </li>
-        <li>CyberPunk 2077 <button>Купить</button> </li>
-        <li> PayDay 2 <button>Купить</button> </li>
-
-    </ul>
+    {% for product in products %}
+    <li>
+        <strong>{{ product }}<button>Купить</button>₽
+        <br>
+    </li>
+    {% endfor %}
+</ul>
 <a href="http://127.0.0.1:8000/platform/"><button>Вернуться обратно.</button></a>
 </body>
 </html>
